-fix (Service) Адаптировать сервис генерации excel файлов